--- a/PC-ESN.ipynb
+++ b/PC-ESN.ipynb
@@ -36,33 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#def computeRMSE():\n",
-    "\n",
-    "def normalize_input(inputSequence):\n",
-    "    iMu = mean(inputSequence, axis=0)\n",
-    "    iMax = amax(abs(inputSequence), axis=0)\n",
-    "    normInputSequence = (inputSequence-iMu)/iMax\n",
-    "    return normInputSequence"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PCESN():\n",
-    "    def __init__(self,nInputUnits,nReservoirUnits,nOutputUnits,spectralRadius):\n",
+    "    def __init__(self,nInputUnits,nReservoirUnits,nOutputUnits,spectralRadius,eta):\n",
     "        print('Creating PC-ESN...')\n",
     "        ### STRUCTURE\n",
     "        self.nInputUnits = nInputUnits\n",
     "        self.nReservoirUnits = nReservoirUnits\n",
     "        self.nOutputUnits = nOutputUnits\n",
-    "        #self.nTotalUnits = nInputUnits + nReservoirUnits + nOutputUnits\n",
     "        \n",
     "        self.eta = eta # learning rate\n",
     "        \n",
@@ -87,7 +71,7 @@
     "        self.Wres *= self.spectralRadius\n",
     "        \n",
     "        self.Win = eye(nInputUnits)\n",
-    "        self.Wself = (2.0*random.rand(nInputUnits, nInputUnits)-1.0) # init not mentioned???\n",
+    "        self.Wself = (2.0*random.rand(nReservoirUnits, nInputUnits)-1.0) # init not mentioned???\n",
     "        self.Wfb = (2.0 * random.rand(nReservoirUnits, nOutputUnits)- 1.0)\n",
     "        self.Wout = (2.0 * random.rand(nOutputUnits,nReservoirUnits)- 1.0) # init not mentioned???\n",
     "        self.Wdir = (2.0 * random.rand(nOutputUnits,nInputUnits)- 1.0)\n",
