--- a/PC-ESN.ipynb
+++ b/PC-ESN.ipynb
@@ -51,8 +51,8 @@
     "        self.eta = eta # learning rate\n",
     "        \n",
     "        # initalize input sum and mean\n",
-    "        self.uMean = 0 \n",
-    "        self.uAbs = 0.00001\n",
+    "        self.inputMean = 0 \n",
+    "        self.inputAbs = 0.00001\n",
     "        self.i = 0\n",
     "\n",
     "        ### INITIALIZE WEIGHTS JAEGER (Sparse reservoir weights) (Polydoros et. al. Algorithm 1)\n",
@@ -77,7 +77,27 @@
     "        self.Wdir = (2.0 * random.rand(nOutputUnits,nInputUnits)- 1.0)\n",
     "        \n",
     "        print('Successful!')\n",
-    "    "
+    "        \n",
+    "        def train(self, sigma2, phi2, inputSample,targetSample):\n",
+    "            # Normalize and center input\n",
+    "            self.inputMean = self.inputMean + (inputSample-self.inputMean)/(self.i+1)\n",
+    "            inputSample -= self.inputMean\n",
+    "            self.inputAbs = maximum(self.inputAbs, absolute(inputSample))\n",
+    "            inputSample /= self.inputAbs\n",
+    "            self.i += 1 # update index\n",
+    "\n",
+    "            self.s = tanh(self.Win @ inputSample) # update self-organized layer\n",
+    "            self.r = tanh(self.Wres @ self.r + self.Wself @ self.s + self.Wfb @ self.o)\n",
+    "            self.o = self.Wtrain @ self.ct\n",
+    "            \n",
+    "            self.Vp1 = inv(inv(self.Vm1) + (1/sigma2)*(self.c @ self.c.T))\n",
+    "            self.wtrain = self.Vp1 @ inv(self.Vm1)@self.w + (1/sigma2)*self.Vp1@self.c@self.tau\n",
+    "        \n",
+    "            # Calculate GHL update \n",
+    "            triang = tril(self.s @ self.s.T)\n",
+    "            dWin = self.eta*(self.s@inputSample.T - triang @ self.Win)\n",
+    "\n",
+    "            self.Win += dWin # update Win matrix"
    ]
   },
   {
