--- a/Complete Network.ipynb
+++ b/Complete Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,7 @@
     "\n",
     "# to numpy array\n",
     "u = uVec.values[:, :, np.newaxis]\n",
-    "y = yVec.values[:, :, np.newaxis]\n",
-    "\n",
-    "# generate layer\n",
-    "eta = 0.9\n",
-    "layer_size = 21\n",
-    "input_size = u.shape[1]\n",
-    "Layer = SelfOrganizedLayer(layer_size, input_size, eta)"
+    "y = yVec.values[:, :, np.newaxis]\n"
    ]
   },
   {
@@ -352,12 +346,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "class output_layer:\n",
-    "    def __init__(self, s_size, r_size, n_ouput, sigma_2 = 0.1, phi_2 = 1):\n",
+    "    def __init__(self, s_size, r_size, n_output, sigma_2 = 0.1, phi_2 = 1):\n",
     "        \n",
     "        # save parameters\n",
     "        self.sigma_2 = sigma_2\n",
@@ -375,12 +369,14 @@
     "        \n",
     "        self.V = np.linalg.inv(self.V + (1/self.sigma_2)* c_t @ c_t.T)\n",
     "        \n",
-    "        a =   self.W_train.T @ (self.V @ np.linalg.inv(V_prev)).T \n",
-    "        b = 1/self.sigma_2 * tau @ (self.V @ c_t).T\n",
+    "        a = self.V @ np.linalg.inv(V_prev) @ self.W_train.T\n",
+    "        b = 1/self.sigma_2 * self.V @ c_t @ tau.T\n",
+    "        print(b.shape)\n",
+    "        print(a.shape)\n",
     "        self.W_train = np.sum([a.T, b.T], axis=0)\n",
     "            \n",
-    "    def updateOutput(c_dot):\n",
-    "        o_dot = np.dot(self.W_train, c_dot)\n",
+    "    def updateOutput(self, c_t):\n",
+    "        o_dot = np.dot(self.W_train, c_t)\n",
     "        return o_dot"
    ]
   },
@@ -393,42 +389,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Layer = output_layer(21, 100, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "data type not understood",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-e4a70cb4eeb3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: data type not understood"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(121, 7)\n",
+      "(121, 7)\n",
+      "[[0.99991736]\n",
+      " [0.99991736]\n",
+      " [0.99991736]\n",
+      " [0.99991736]\n",
+      " [0.99991736]\n",
+      " [0.99991736]\n",
+      " [0.99991736]]\n"
      ]
     }
    ],
    "source": [
-    "    def fit(self, self_input, res_input, tau_sens, outputs, epoch):    #TRAINING\n",
-    "        \"\"\"\n",
-    "        Collect the network's reaction to training data, train readout weights.\n",
-    "\n",
-    "        Args:\n",
-    "            inputs: array of dimensions (n_res + n_self) x N_training_samples\n",
-    "            outputs: array of dimension n_outputs x N_training_samples\n",
-    "\n",
-    "        Returns:\n",
-    "            the network's output on the training data, using the trained weights\n",
-    "        \"\"\"\n",
-    "        # Maybe it's needed to add some reshape in order to adapt the input data to the code\n",
-    "        \n",
-    "        c = np.hstack((self_input.T,res_input.T)).T # Size (n_res + n_self) x N_training_samples\n",
-    "        for n in range(1, c.shape[1]):\n",
-    "            output[n, :] = self._update(c[:,n])\n",
-    "            #Update the weights when given torque measurement\n",
-    "            update_parameters(self, c[:,n-1], self.tau[n], self.W_train)\n",
-    "        \n",
-    "        return output"
+    "c_t = np.ones((21+100, 1))\n",
+    "tau = np.ones((7,1))\n",
+    "o = Layer.updateOutput(c_t)\n",
+    "Layer.updateWeights(c_t, tau)\n",
+    "Layer.W_train\n",
+    "print(o)"
    ]
   }
  ],
