--- a/PC-ESN.ipynb
+++ b/PC-ESN.ipynb
@@ -41,13 +41,15 @@
    "outputs": [],
    "source": [
     "class PCESN():\n",
-    "    def __init__(self,nInputUnits,nReservoirUnits,nOutputUnits,spectralRadius,eta):\n",
+    "    def __init__(self,nInputUnits,nReservoirUnits,nOutputUnits,spectralRadius,sigma2=0.1, phi2 = 1,eta):\n",
     "        print('Creating PC-ESN...')\n",
     "        ### STRUCTURE\n",
     "        self.nInputUnits = nInputUnits\n",
     "        self.nReservoirUnits = nReservoirUnits\n",
     "        self.nOutputUnits = nOutputUnits\n",
     "        \n",
+    "        self.sigma2 = sigma2\n",
+    "        self.phi2 = phi2\n",
     "        self.eta = eta # learning rate\n",
     "        \n",
     "        # initalize input sum and mean\n",
@@ -76,9 +78,13 @@
     "        self.Wout = (2.0 * random.rand(nOutputUnits,nReservoirUnits)- 1.0) # init not mentioned???\n",
     "        self.Wdir = (2.0 * random.rand(nOutputUnits,nInputUnits)- 1.0)\n",
     "        \n",
+    "        self.Wtrain = zeros((nOutputUnits, nInputUnits + nReservoirUnits))\n",
+    "\n",
+    "        self.V = self.sigma2 * eye(nInputUnits + nReservoirUnits)\n",
+    "        \n",
     "        print('Successful!')\n",
     "        \n",
-    "        def train(self, sigma2, phi2, inputSample,targetSample):\n",
+    "        def train(self, inputSample,targetSample):\n",
     "            # Normalize and center input\n",
     "            self.inputMean = self.inputMean + (inputSample-self.inputMean)/(self.i+1)\n",
     "            inputSample -= self.inputMean\n",
@@ -90,8 +96,13 @@
     "            self.r = tanh(self.Wres @ self.r + self.Wself @ self.s + self.Wfb @ self.o)\n",
     "            self.o = self.Wtrain @ self.ct\n",
     "            \n",
-    "            self.Vp1 = inv(inv(self.Vm1) + (1/sigma2)*(self.c @ self.c.T))\n",
-    "            self.wtrain = self.Vp1 @ inv(self.Vm1)@self.w + (1/sigma2)*self.Vp1@self.c@self.tau\n",
+    "            Vprev = self.V\n",
+    "            self.V = linalg.inv(linalg.inv(Vprev) + (1/self.sigma_2) * c @ c.T)\n",
+    "            \n",
+    "            a = self.V @ np.linalg.inv(V_prev) @ self.W_train.T\n",
+    "            b = 1/self.sigma_2 * self.V @ c_t @ tau.T\n",
+    "            \n",
+    "            self.Wtrain = np.sum([a.T, b.T], axis=0)\n",
     "        \n",
     "            # Calculate GHL update \n",
     "            triang = tril(self.s @ self.s.T)\n",
