--- a/PC-ESN.ipynb
+++ b/PC-ESN.ipynb
@@ -94,6 +94,7 @@
     "\n",
     "            self.s = tanh(self.Win @ inputSample) # update self-organized layer\n",
     "            self.r = tanh(self.Wres @ self.r + self.Wself @ self.s + self.Wfb @ self.o)\n",
+    "            self.c = vstack((self.r, self.s))\n",
     "            self.o = self.Wtrain @ self.ct\n",
     "            \n",
     "            Vprev = self.V\n",
