--- a/PC-ESN.ipynb
+++ b/PC-ESN.ipynb
@@ -78,7 +78,7 @@
     "        self.Wout = (2.0 * random.rand(nOutputUnits,nReservoirUnits)- 1.0) # init not mentioned???\n",
     "        self.Wdir = (2.0 * random.rand(nOutputUnits,nInputUnits)- 1.0)\n",
     "        \n",
-    "        self.Wtrain = zeros((nOutputUnits, nInputUnits + nReservoirUnits))\n",
+    "        #self.Wtrain = zeros((nOutputUnits, nInputUnits + nReservoirUnits))\n",
     "\n",
     "        self.V = self.sigma2 * eye(nInputUnits + nReservoirUnits)\n",
     "        \n",
@@ -95,12 +95,14 @@
     "            self.s = tanh(self.Win @ inputSample) # update self-organized layer\n",
     "            self.r = tanh(self.Wres @ self.r + self.Wself @ self.s + self.Wfb @ self.o)\n",
     "            self.c = vstack((self.r, self.s))\n",
+    "            \n",
+    "            self.Wtrain = hstack((self.Wout,self.Wdir)) \n",
     "            self.o = self.Wtrain @ self.ct\n",
     "            \n",
     "            Vprev = self.V\n",
-    "            self.V = linalg.inv(linalg.inv(Vprev) + (1/self.sigma_2) * c @ c.T)\n",
+    "            self.V = linalg.inv(linalg.inv(Vprev) + (1/self.sigma_2) * self.c @ self.c.T)\n",
     "            \n",
-    "            a = self.V @ np.linalg.inv(V_prev) @ self.W_train.T\n",
+    "            a = self.V @ linalg.inv(V_prev) @ self.Wtrain.T\n",
     "            b = 1/self.sigma_2 * self.V @ c_t @ tau.T\n",
     "            \n",
     "            self.Wtrain = np.sum([a.T, b.T], axis=0)\n",
