--- a/Python/PC-ESN-Update.ipynb
+++ b/Python/PC-ESN-Update.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "from matplotlib import pyplot as plt\n",
     "from scipy.sparse import rand as sprand\n",
     "from scipy.sparse import csr_matrix\n",
-    "from scipy.sparse.linalg import eigs as speigs"
+    "from scipy.sparse.linalg import eigs as speigs\n",
+    "from tqdm import trange"
    ]
   },
   {
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
     "        \n",
     "        # Initalize input sum and mean variables\n",
     "        self.inputMean = zeros((nInputUnits,1))\n",
-    "        self.maxTorque = maxTorque\n",
+    "        #self.maxTorque = maxTorque\n",
     "        self.t = 0\n",
     "\n",
     "        # Initialize weights, H.Jaeger (Sparse reservoir weights)\n",
@@ -163,7 +164,8 @@
     "        a = self.V @ linalg.inv(Vprev) @ self.Wtrain.T\n",
     "        b = 1/self.sigma2 * (self.V @ ccurr) @ targetSample.T\n",
     "        \n",
-    "        self.Wtrain = sum([a.T, b.T], axis=0)\n",
+    "        #self.Wtrain = sum([a.T, b.T], axis=0)\n",
+    "        self.Wtrain = a.T + b.T\n",
     "\n",
     "        # Calculate GHL update \n",
     "        dWin = self.eta*(inputSample@self.s.T - tril(self.s @ self.s.T) @ self.Win)\n",
@@ -178,6 +180,106 @@
     "        #self.outputMean = self.outputMean + delta/obj.t;\n",
     "        #self.M2 = self.M2 + (targetSample-self.outputMean) * delta;\n",
     "        #self.sigma2 = vstack((ones(self.nReservoirUnits,1),matlib.repmat(self.M2/self.t,(3,1))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nInputs = 21\n",
+    "nOutputs = 7\n",
+    "split = 0.5\n",
+    "\n",
+    "data = genfromtxt('train_data2.csv', delimiter=',')\n",
+    "# 'baxter_rand'\n",
+    "# 'sarcos'\n",
+    "ind = round(split*data.shape[0])\n",
+    "\n",
+    "uTrain = data[0:ind,0:nInputs,newaxis]\n",
+    "yTrain = data[0:ind,nInputs:,newaxis]\n",
+    "uTest = data[ind:,0:nInputs,newaxis]\n",
+    "yTest = data[ind:,nInputs:,newaxis]\n",
+    "\n",
+    "# Normalize input\n",
+    "uTrain = normalize_input(uTrain)\n",
+    "uTest = normalize_input(uTest)\n",
+    "\n",
+    "trainSamples = uTrain.shape[1]\n",
+    "testSamples = uTest.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nInputUnits = 21\n",
+    "nReservoirUnits = 600\n",
+    "nOutputUnits = 7\n",
+    "spectralRadius = 0.3 # Tune!!!\n",
+    "sigma2 = 0.1\n",
+    "phi2 = 1\n",
+    "smoothFactor = 0.9\n",
+    "\n",
+    "pcesn = PCESN(nInputUnits,nReservoirUnits,nOutputUnits,spectralRadius,sigma2,phi2,smoothFactor)\n",
+    "\n",
+    "totalSamples = 3000 # Polydoros model seems to converge in 2000 samples!\n",
+    "output = zeros((7,totalSamples,1))\n",
+    "\n",
+    "for i in trange(totalSamples): # or standard \"range\" to remove progress bar \n",
+    "    pcesn.train(uTrain[i,:],yTrain[i,:])\n",
+    "    output[:,i] = pcesn.o\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,15))\n",
+    "for j in range(1,8):\n",
+    "    plt.subplot(420+j)\n",
+    "    plt.plot(output[j-1,1500:2000],'b')\n",
+    "    plt.plot(yTrain[1500:2000,j-1],'r')\n",
+    "    plt.title('Joint {}'.format(j))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_joints, error_avg = normalized_mse(output[:,2700:totalSamples,0].T, yTrain[2700:totalSamples,:,0])\n",
+    "print(error_joints)\n",
+    "print(error_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_test = zeros((7,testSamples,1))\n",
+    "\n",
+    "for i in trange(testSamples): # or standard \"range\" to remove progress bar \n",
+    "    pcesn.train(uTest[i,:],yTest[i,:])\n",
+    "    output_test[:,i] = pcesn.o\n",
+    "    "
    ]
   }
  ],
